Bug 1453190 - Don't get editing session during destroying docshell. r=masayuki

When closing window / documnet, if content modifies an element that has
contenteditable via unload event, it hits assertion in
`nsDocShell::EnsureEditorData` due to destroying document. So we should
return error before getting editing session.

Differential Revision: https://phabricator.services.mozilla.com/D50573